fix: style of progress on firefox and update readme

--- a/src/components/MediaPlayer/MediaPlayer.module.css
+++ b/src/components/MediaPlayer/MediaPlayer.module.css
@@ -52,17 +52,20 @@
 .mediaPlayer .controls progress {
   width: 400px;
   height: 12px;
-  background-color: var(--color-primary);
+  background-color: var(--bg-5);
   border-radius: 7px;
   cursor: pointer;
+  border: none;
 }
 
+/* for IE10  */
 .mediaPlayer .controls progress::-webkit-progress-bar {
   background-color: var(--bg-5);
   border-radius: 7px;
 }
 
-.mediaPlayer .controls progress::-webkit-progress-value {
+.mediaPlayer .controls progress::-webkit-progress-value,
+.mediaPlayer .controls progress::-moz-progress-bar {
   background-color: var(--color-primary);
   border-radius: 7px;
 }
